Bug 285653 - Thousands of (yes THOUSANDS) of errors "Select Failed, server replied A000... NO Mailbox ...
Summary: Thousands of (yes THOUSANDS) of errors "Select Failed, server replied A000......
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.7
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-03 13:38 UTC by Chris
Modified: 2011-11-04 12:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris 2011-11-03 13:38:54 UTC
Application: kontact (4.7.2)
KDE Platform Version: 4.7.2 (4.7.2)
Qt Version: 4.7.4
Operating System: Linux 2.6.37.6-0.7-desktop x86_64
Distribution: "openSUSE 11.4 (x86_64)"

-- Information about the crash:
I started Kmail today as usual.  For the last half hour I have received what appears to be thousands of errors (OK maybe hundreds) with variations of "Select failed, server replied A000XXXXX NO Mailbox does not exist or must be subscribed to."  The "XXXXX" above is replaced by various numerals.  Sometimes the same sometimes different.  Eventually Kmail crashed with this bug.  Kmail ran reasonably well yesterday.  Aside form the continued replication of emails that had already been received, read and deleted.  When reviewing webmail access to one IMAP account there are not replications of the emails. When reviewing an Exchange hosted account there are replications.  Does anyone really care about an inoperable system?  Are work arounds or fixes being posted somewhere that is accessible by the slight more than average user?

The crash can be reproduced every time.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fcc1fd43760 (LWP 3307))]

Thread 3 (Thread 0x7fcc07fe3700 (LWP 3341)):
#0  0x00007fcc17d3a38c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007fcc1c5c9694 in ?? () from /usr/lib64/libQtWebKit.so.4
#2  0x00007fcc17d35a3f in start_thread () from /lib64/libpthread.so.0
#3  0x00007fcc1d2fa66d in clone () from /lib64/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fcc076e2700 (LWP 3342)):
#0  0x00007fcc1d2f14f3 in poll () from /lib64/libc.so.6
#1  0x00007fcc169c4114 in ?? () from /lib64/libglib-2.0.so.0
#2  0x00007fcc169c4650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#3  0x00007fcc1e6d2636 in QEventDispatcherGlib::processEvents (this=0x644aa0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007fcc1e6a6c22 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fcc1e6a6e35 in QEventLoop::exec (this=0x7fcc076e1e20, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007fcc1e5bbbe4 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:498
#7  0x00007fcc1e5be4d5 in QThreadPrivate::start (arg=0x643510) at thread/qthread_unix.cpp:331
#8  0x00007fcc17d35a3f in start_thread () from /lib64/libpthread.so.0
#9  0x00007fcc1d2fa66d in clone () from /lib64/libc.so.6
#10 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fcc1fd43760 (LWP 3307)):
[KCrash Handler]
#6  QString::operator= (this=0x20, other=...) at tools/qstring.cpp:1359
#7  0x00007fcc1abe3a9d in KPIM::ProgressItem::setStatus (this=0x0, v=<value optimized out>) at /usr/src/debug/kdepim-4.7.2/libkdepim/progressmanager.cpp:118
#8  0x00007fcbbf2f0e04 in KMail::BackupJob::archiveNextFolder (this=0x2cefbf0) at /usr/src/debug/kdepim-4.7.2/kmail/backupjob.cpp:319
#9  0x00007fcbbf2f2a08 in KMail::BackupJob::archiveNextMessage (this=0x2cefbf0) at /usr/src/debug/kdepim-4.7.2/kmail/backupjob.cpp:201
#10 0x00007fcbbf2f2fdc in KMail::BackupJob::qt_metacall (this=0x2cefbf0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x2e360a0) at /usr/src/debug/kdepim-4.7.2/build/kmail/backupjob.moc:83
#11 0x00007fcc1e6bb7aa in QObject::event (this=0x2cefbf0, e=<value optimized out>) at kernel/qobject.cpp:1226
#12 0x00007fcc1da6a264 in QApplicationPrivate::notify_helper (this=0x639af0, receiver=0x2cefbf0, e=0x2c3b3b0) at kernel/qapplication.cpp:4481
#13 0x00007fcc1da7281a in QApplication::notify (this=<value optimized out>, receiver=0x2cefbf0, e=0x2c3b3b0) at kernel/qapplication.cpp:4360
#14 0x00007fcc1f0efae6 in KApplication::notify (this=0x7fffcc123ce0, receiver=0x2cefbf0, event=0x2c3b3b0) at /usr/src/debug/kdelibs-4.7.2/kdeui/kernel/kapplication.cpp:311
#15 0x00007fcc1e6a77cc in QCoreApplication::notifyInternal (this=0x7fffcc123ce0, receiver=0x2cefbf0, event=0x2c3b3b0) at kernel/qcoreapplication.cpp:787
#16 0x00007fcc1e6aafc5 in sendEvent (receiver=0x0, event_type=0, data=0x612d10) at kernel/qcoreapplication.h:215
#17 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x612d10) at kernel/qcoreapplication.cpp:1428
#18 0x00007fcc1e6d2443 in sendPostedEvents (s=<value optimized out>) at kernel/qcoreapplication.h:220
#19 postEventSourceDispatch (s=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:277
#20 0x00007fcc169c3bd3 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#21 0x00007fcc169c43b0 in ?? () from /lib64/libglib-2.0.so.0
#22 0x00007fcc169c4650 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#23 0x00007fcc1e6d25df in QEventDispatcherGlib::processEvents (this=0x612520, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#24 0x00007fcc1db1038e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#25 0x00007fcc1e6a6c22 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#26 0x00007fcc1e6a6e35 in QEventLoop::exec (this=0x7fffcc123c30, flags=...) at kernel/qeventloop.cpp:201
#27 0x00007fcc1e6ab27b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#28 0x000000000040416f in _start ()

Possible duplicates by query: bug 249195.

Reported using DrKonqi
Comment 1 Laurent Montel 2011-11-04 12:14:35 UTC
Git commit a75c2977e9efc1e0a5db3d3658698d05936b4aa2 by Montel Laurent.
Committed on 04/11/2011 at 13:13.
Pushed by mlaurent into branch 'master'.

Fix crash "Bug 285653 - Thousands of (yes THOUSANDS) of errors "Select Failed, server replied A000... NO Mailbox ..."

FIXED-IN: 4.7.4
BUG: 285653

M  +2    -1    mailcommon/backupjob.cpp

http://commits.kde.org/kdepim/a75c2977e9efc1e0a5db3d3658698d05936b4aa2
Comment 2 Laurent Montel 2011-11-04 12:15:19 UTC
Git commit 2ce1944e5f30863d27796da71656f03183e4c93b by Montel Laurent.
Committed on 04/11/2011 at 13:13.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix crash "Bug 285653 - Thousands of (yes THOUSANDS) of errors "Select Failed, server replied A000... NO Mailbox ..."

FIXED-IN: 4.7.4
BUG: 285653
(cherry picked from commit a75c2977e9efc1e0a5db3d3658698d05936b4aa2)

M  +2    -1    kmail/backupjob.cpp

http://commits.kde.org/kdepim/2ce1944e5f30863d27796da71656f03183e4c93b
Comment 3 Laurent Montel 2011-11-04 12:15:50 UTC
You crash is fixed.