Fix crash "Bug 285653 - Thousands of (yes THOUSANDS) of errors "Select Failed, server replied A000... NO Mailbox ..."

FIXED-IN: 4.7.4
BUG: 285653