mailcommon/backupjob.cpp
@@ -324,7 +324,8 @@ void BackupJob::archiveNextFolder()
   mCurrentFolder = mPendingFolders.takeAt( 0 );
   kDebug() << "===> Archiving next folder: " << mCurrentFolder.name();
   const QString archivingStr( i18n( "Archiving folder %1", mCurrentFolder.name() ) );
-  mProgressItem->setStatus( archivingStr );
+  if( mProgressItem )
+     mProgressItem->setStatus( archivingStr );
   KPIM::BroadcastStatus::instance()->setStatusMsg( archivingStr );
   
   const QString folderName = mCurrentFolder.name();
